[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/tile.gd" type="Script" id=1]
[ext_resource path="res://Sprites/tiles/basic/new border grey tile.png" type="Texture" id=2]

[node name="tile" type="Node2D" groups=[
"tiles",
]]
script = ExtResource( 1 )

[node name="shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.196078 )
position = Vector2( -3.09358, 2.47486 )
scale = Vector2( 1.04691, 1.04552 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="outline2" type="Sprite" parent="."]
modulate = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
position = Vector2( 0, -0.176781 )
scale = Vector2( 1.03, 1.03 )
texture = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="background" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( -0.0883824, -0.176782 )
scale = Vector2( 1.15, 1.15 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = -60.0
margin_top = -59.0
margin_right = 61.0
margin_bottom = 61.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.176781 )
texture = ExtResource( 2 )

[node name="debug_info" type="Label" parent="."]
visible = false
margin_left = -69.0
margin_top = -68.0
margin_right = 70.0
margin_bottom = 66.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
